--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "react-scroll": "^1.8.9",
-    "sass": "^1.64.1"
+    "react-tsparticles": "^2.11.0",
+    "sass": "^1.64.1",
+    "tsparticles": "^2.11.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
