--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.1",
+    "formik": "^2.4.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
@@ -18,7 +19,8 @@
     "react-scroll": "^1.8.9",
     "react-tsparticles": "^2.11.0",
     "sass": "^1.64.1",
-    "tsparticles": "^2.11.1"
+    "tsparticles": "^2.11.1",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
